tests/algorithms/x/Python/hashes/sha1.error
run: exit status 1
{
  "duration_us": 5202,
  "memory_bytes": 15343616,
  "name": "main"
}
Traceback (most recent call last):
  File "/workspace/mochi/tests/algorithms/x/Python/hashes/sha1.py", line 236, in <module>
    main()
  File "/workspace/mochi/tests/algorithms/x/Python/hashes/sha1.py", line 228, in main
    print(sha1("Test String"))
          ^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/algorithms/x/Python/hashes/sha1.py", line 220, in sha1
    return to_hex32(h0) + to_hex32(h1) + to_hex32(h2) + to_hex32(h3) + to_hex32(h4)
           ^^^^^^^^^^^^
  File "/workspace/mochi/tests/algorithms/x/Python/hashes/sha1.py", line 127, in to_hex32
    s = digits[d:d + 1] + s
        ~~~~~~^^^^^^^^^
TypeError: slice indices must be integers or None or have an __index__ method
